2006-07-27  Raphaël Quinet  <raphael@gimp.org>

	* HACKING: Clarify how patches can be submitted.

2006-07-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/grid.c: fix my fix.
	
2006-07-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/grid.c: width and height were reversed when
	setting refval boundaries in a couple of places; problem
	pointed out by Maciej Katafiasz on irc.

2006-07-27  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/script-fu/scripts/spyrogimp.scm: updated web URL

2006-07-26  Michael Natterer  <mitch@gimp.org>

	* desktop/gimp.desktop.in.in: added X-GNOME-Bugzilla-Component,
	X-GNOME-Bugzilla-Version and X-GNOME-Bugzilla-OtherBinaries to
	make new bug-buddy happy. Fixes bug #348859.

2006-07-26  Michael Natterer  <mitch@gimp.org>

	* app/actions/select-commands.c (select_shrink_callback): the
	"shrink from border" toggle value needs to be negated for being
	used as internal "edge lock" parameter. Fixes bug #348839.

2006-07-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): removed code that was
	special-casing RTL since gtk_tree_view_get_path_at_pos() takes
	this correctly into account now. Fixes bug #348347.

	* app/widgets/gimpdockable.c (gimp_dockable_size_allocate): fix
	menu button positioning for RTL.

2006-07-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimplevelstool.c (levels_input_area_event): Applied
	patch from Wim Lewis which fixes major uglyness (the code was
	rounding using sprintf() and atof() -- puke). Fixes bug #348317.

2006-07-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-edit.c: formatting.

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.override: manually wrap the function
	gimp_brush_select_button_get_brush().

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/py-slice.py: use PF_DIRNAME for save_path.
	Fixes bug #138714.
