@@ -824,9 +824,57 @@ CODE
     );
 }
 
+sub vectors_to_selection {
+    $blurb = 'Transforms the specified vectors object into a selection';
+
+    $help = <<'HELP';
+This procedure renders the desired vectors object into the current selection
+of the image the vectors object belongs to.
+HELP
+
+    &simon_pdb_misc('2006', '2.4');
+
+    @inargs = (
+        { name => 'vectors', type => 'vectors',
+          desc => 'The vectors object to render to the selection' },
+        { name => 'op', type => 'enum GimpChannelOps',
+          desc => 'The desired operation with current selection' },
+        { name => 'antialias', type => 'boolean',
+          desc => 'Antialias selection.' },
+        { name => 'feather', type => 'boolean',
+          desc => 'Feather selection.' },
+        { name => 'feather_radius_x', type => 'float',
+          desc => 'Feather radius x.'  },
+        { name => 'feather_radius_y', type => 'float',
+          desc => 'Feather radius y.'  }
+    );
+
+    %invoke = (
+        code => <<'CODE'
+{
+  GimpImage *image;
+
+  image = gimp_item_get_image (GIMP_ITEM (vectors));
+
+  if (image)
+    gimp_channel_select_vectors (gimp_image_get_mask (image),
+                                 _("Path to Selection"),
+                                 vectors,
+                                 op,
+                                 antialias,
+                                 feather,
+                                 feather_radius_x,
+                                 feather_radius_y);
+  else
+    success = FALSE;
+}
+CODE
+    );
+
+}
 
 @headers = qw(<string.h> "core/gimp.h" "core/gimplist.h" "core/gimpimage.h"
-              "vectors/gimpanchor.h" "vectors/gimpbezierstroke.h"
+              "core/gimpchannel-select.h" "vectors/gimpanchor.h" "vectors/gimpbezierstroke.h"
               "vectors/gimpvectors.h"
               "gimp-intl.h");
 
@@ -848,7 +896,8 @@ CODE
             vectors_bezier_stroke_lineto
             vectors_bezier_stroke_conicto
             vectors_bezier_stroke_cubicto
-            vectors_bezier_stroke_new_ellipse);
+            vectors_bezier_stroke_new_ellipse
+            vectors_to_selection);
 
 %exports = (app => [@procs], lib => [@procs]);
 
